[package]
name = "rgz"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tygoto/rgz"
keywords = ["gazebo", "robotics", "simulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
]

[dependencies]
rgz_msgs = { path= "crates/rgz_msgs", version = "0.1.0"}
rgz_transport = { path= "crates/rgz_transport", version = "0.1.0"}
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.11.9"
prost-types = "0.11.9"

[[example]]
name = "publisher"
path = "examples/transport/publisher.rs"

[[example]]
name = "subscriber"
path = "examples/transport/subscriber.rs"

[[example]]
name = "requester"
path = "examples/transport/requester.rs"

[[example]]
name = "responser"
path = "examples/transport/responser.rs"

[[example]]
name = "lidar_node"
path = "examples/transport/lidar_node.rs"
