[package]
name = "rgz"
version = "0.2.0"
edition = "2021"
description = "Robot simulator compatible with Gazebo"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tygoto/rgz"
keywords = ["gazebo", "robotics", "simulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
]

[features]
default = ["rgz_sim", "transport"]
transport = [
    "rgz_transport",
    "rgz_msgs"
]

[dependencies]
rgz_msgs = { path= "crates/rgz_msgs", version = "0.1.1", optional = true }
rgz_transport = { path= "crates/rgz_transport", version = "0.2.0", optional = true}
rgz_sim = { path= "crates/rgz_sim", version = "0.2.0", optional = true}

anyhow = "1"
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }

[[example]]
name = "publisher"
path = "examples/transport/publisher.rs"
required-features = ["transport"]

[[example]]
name = "subscriber"
path = "examples/transport/subscriber.rs"
required-features = ["transport"]

[[example]]
name = "requester"
path = "examples/transport/requester.rs"
required-features = ["transport"]

[[example]]
name = "responser"
path = "examples/transport/responser.rs"
required-features = ["transport"]

[[example]]
name = "lidar_node"
path = "examples/transport/lidar_node.rs"
required-features = ["transport"]

