[package]
name = "rgz_derive"
version = "0.1.0"
edition = "2021"
description = "A derive macro for rgz"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tygoto/rgz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0.15"
quote = "1.0.9"
regex = "1"
