[package]
name = "rgz_msgs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
prost = "0.11.9"
prost-types = "0.11.9"
rgz_derive = { path = "../rgz_derive", version = "0.1.0" }

[build-dependencies]
prost-build = "0.11.9"


