[package]
name = "rgz_msgs"
version = "0.1.1"
edition = "2021"
description = "A Rust implementation of gz-msgs"
license = "MIT OR Apache-2.0"
include = ["Cargo.toml", "src/**/*.rs", "build.rs", "gz-msgs/**/*.proto"]
repository = "https://github.com/tygoto/rgz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
prost-types = "0.12"
rgz_derive = { path = "../rgz_derive", version = "0.1.0" }

[build-dependencies]
prost-build = "0.12"


