[package]
name = "rgz_sim"
version = "0.1.0"
edition = "2021"
description = "Rust Gazebo Sim"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tygoto/rgz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.11.2"
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_egui = "0.21.0"
bevy_panorbit_camera = "0.7.0"
bevy_debug_grid = "0.2"

anyhow = "1.0"
regex = "1.9.3"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.32.0", features = ["sync", "rt-multi-thread", "macros"] }
rgz_msgs = { path = "../rgz_msgs", version = "0.1.0"}
rgz_transport = { path = "../rgz_transport", version = "0.1.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
