[package]
name = "rgz_transport"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of gz-transport"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tygoto/rgz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgz_msgs = { path = "../rgz_msgs", version = "0.1.0"}
anyhow = "1.0"
prost = "0.11.9"
prost-types = "0.11.9"
async-trait = "0.1.51"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4"] }
zmq = "0.10.0"
local-ip-address = "0.5.1"
socket2 = { version = "0.5.2", features = ["all"] }
whoami = "1.4.0"
once_cell = "1.8.0"
regex = "1.8.1"
tracing = "0.1"
tracing-subscriber = "0.3"




